fix(tpl): prevent collapse multiple whitespaces from filenames

--- a/src/tpl/assert/main.css
+++ b/src/tpl/assert/main.css
@@ -59,6 +59,7 @@ input, button {
 	display: block;
 	padding-right: 1.2em;
 	min-width: 1em;
+	white-space: pre-wrap;
 }
 
 .path-list a:after {
@@ -186,6 +187,7 @@ input, button {
 	flex-basis: 0;
 	margin-left: 0;
 	font-size: 1.5em;
+	white-space: pre-wrap;
 	word-break: break-all;
 }
 
